# ChangeLog for dev-util/glade
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/glade/ChangeLog,v 1.130 2011/03/16 10:23:48 nirbheek Exp $

  16 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  glade-2.12.2-r1.ebuild, glade-3.6.7.ebuild:
  Fix slot-deps on gtk+ and other libs

  16 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  glade-2.12.2-r1.ebuild, glade-3.6.7.ebuild:
  Fix slot-deps on gtk+ and other libs

  20 Jul 2010; Jeroen Roovers <jer@gentoo.org> glade-3.6.7.ebuild:
  Drop HPPA keywording (bug #324511).

  03 Apr 2010; Gilles Dartiguelongue <eva@gentoo.org> -glade-3.4.5.ebuild,
  glade-3.6.7.ebuild:
  Add missing docbook-dtd-4.1.2 dependency, bug #309707. Clean up old
  revision.

  14 Mar 2010; Raúl Porcel <armin76@gentoo.org> glade-3.6.7.ebuild:
  arm/ia64/sh/sparc stable wrt #298204

  10 Mar 2010; Gilles Dartiguelongue <eva@gentoo.org> -glade-3.6.3.ebuild,
  -glade-3.6.4.ebuild, -files/glade-3.6.4-fix-linking.patch,
  -glade-3.6.5.ebuild:
  Clean up old revisions.

  26 Feb 2010; Brent Baude <ranger@gentoo.org> glade-3.6.7.ebuild:
  Marking glade-3.6.7 ppc64 for bug 298204

  24 Jan 2010; Tobias Klausmann <klausman@gentoo.org> glade-3.6.7.ebuild:
  Stable on alpha, bug #298204

  19 Jan 2010; Jeroen Roovers <jer@gentoo.org> glade-3.6.7.ebuild:
  Stable for HPPA (bug #298204).

  08 Jan 2010; Christian Faulhammer <fauli@gentoo.org> glade-3.6.7.ebuild:
  stable x86, bug 298204

  07 Jan 2010; Brent Baude <ranger@gentoo.org> glade-3.6.7.ebuild:
  Marking glade-3.6.7 ppc for bug 298204

  07 Jan 2010; Pacho Ramos <pacho@gentoo.org> glade-3.6.7.ebuild:
  amd64 stable, bug 298204

  04 Oct 2009; Raúl Porcel <armin76@gentoo.org> glade-3.4.5.ebuild:
  sh stable wrt #284713

  23 Sep 2009; Markus Meier <maekke@gentoo.org> glade-3.4.5.ebuild:
  arm stable, bug #284713

*glade-3.6.7 (05 Jul 2009)

  05 Jul 2009; Romain Perier <mrpouet@gentoo.org>
  +glade-3.6.7.ebuild: