@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST glade-2.12.2.tar.bz2 1785723 RMD160 6035749c249492279794d508d3558a8aac17b6f0 SHA1 a43d89b147296244ba4b2efc67e8772d5155afff SHA256 50712d1e5cb369ee1399e9c78ac410e3e69c7582ac9bf1e11d27a7348d3d0a58
 DIST glade3-3.6.7.tar.bz2 2244221 RMD160 ab8487a8914b31ba2cb22bf0261b6ad39b0d1629 SHA1 7621d5ae486ed42c35bb1d147b5693428481e733 SHA256 117905d5b52781e0ffa861e38f47acda0e6bff992c5015408be74a7669769f81
+DIST glade3-3.8.0.tar.bz2 2694485 RMD160 0b6ca19876f857a2518b5d29b909dc6f5a2e0f37 SHA1 1d3d2410ab5f57b27fc754c97d24cbc4bc4470a2 SHA256 ad3f726ccd34d210dbec9cc2787cab91f7b4c4b9e7518c00bc72b6d52c9858bb
 EBUILD glade-2.12.2-r1.ebuild 900 RMD160 5deb118f347fdd89cabe27ac4aa26489d7f26b43 SHA1 c792f634678e236533079db14188d60137db9545 SHA256 0e37da6dae2172ed3edc66efa0ffcf906e99661377f9c76408cde556abe98f86
 EBUILD glade-3.6.7.ebuild 1338 RMD160 577d26f40d92361ff2460c33c34a0d2ce953400a SHA1 b39ff4d2c8a878cf07563e6a46a8735fe64d5813 SHA256 4609783c92c20ef1e865a6d469611bb42c83d89b35a8d2cfa7e6c307efbc18fe
-MISC ChangeLog 16542 RMD160 f8d83419ec5baf644426b1c299c7ca911e660980 SHA1 6b04928f01928282268026974f9d502d8266e36b SHA256 f259bfd9b78745bbeedfb0942fc40300145f7399fa633b822871c77a5b6fea0c
+EBUILD glade-3.8.0.ebuild 1346 RMD160 da2e204f5365438d71c1754df93a0bace4c87918 SHA1 6bfa71d9f8231585a81554925caf4022cb6cf346 SHA256 c04a2727bbd227de11aee82fc018b08f5506c5f1c0a36ffd4fe23dd264222bf4
+MISC ChangeLog 16670 RMD160 d5e0f4fb056fca123d0e09a66363c78b0b519ddc SHA1 30ee382bf017b26a7a242db35b9236b6c7103ce5 SHA256 eec53fc3cd66fbef01a4bcd5ac224a4513ac602f7092f5baa09bdd6d460c6296
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk2dx/UACgkQ1fmVwcYIWAaCeACg4fTSIW3X7O2OiNl3l90ue6Or
+CSsAoLW0B0LDnE1cl196hsqj1/FT9L4c
+=3Bcx
+-----END PGP SIGNATURE-----
